src/decklinkcapi/cpp/decklinkcapi.h

class IDeckLinkDisplayMode;
class IDeckLinkVideoFrame;
typedef void IDeckLinkDisplayMode;
typedef void IDeckLinkVideoFrame;
CAPI int IDeckLinkDisplayMode_GetHeight(IDeckLinkDisplayMode* mode);
CAPI long long IDeckLinkDisplayMode_GetFrameRate(IDeckLinkDisplayMode* mode);
CAPI int IDeckLinkDisplayMode_GetFieldDominance(IDeckLinkDisplayMode* mode);
CAPI int IDeckLinkDisplayMode_GetFlags(IDeckLinkDisplayMode* mode);
CAPI bool IDeckLinkVideoFrame_SetMetadata(IDeckLinkVideoFrame* frame, int eotf, double rx, double ry, double gx, double gy, double bx, double by, double wx, double wy, double maxDML, double minDML, double maxCLL, double maxFALL, int cs);