src/main/java/com/loadingbyte/cinecred/natives/decklinkcapi/decklinkcapi_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetHeight(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MemorySegment IDeckLinkDisplayMode_GetHeight$address() {
        return IDeckLinkDisplayMode_GetHeight.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetHeight(IDeckLinkDisplayMode *mode)
     * }
     */
    public static int IDeckLinkDisplayMode_GetHeight(MemorySegment mode) {
        var mh$ = IDeckLinkDisplayMode_GetHeight.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDisplayMode_GetHeight", mode);
            }
            return (int)mh$.invokeExact(mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDisplayMode_GetFrameRate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_LONG_LONG,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDisplayMode_GetFrameRate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * long long IDeckLinkDisplayMode_GetFrameRate(IDeckLinkDisplayMode *mode)
     * }
     */
    public static FunctionDescriptor IDeckLinkDisplayMode_GetFrameRate$descriptor() {
        return IDeckLinkDisplayMode_GetFrameRate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * long long IDeckLinkDisplayMode_GetFrameRate(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MethodHandle IDeckLinkDisplayMode_GetFrameRate$handle() {
        return IDeckLinkDisplayMode_GetFrameRate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * long long IDeckLinkDisplayMode_GetFrameRate(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MemorySegment IDeckLinkDisplayMode_GetFrameRate$address() {
        return IDeckLinkDisplayMode_GetFrameRate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * long long IDeckLinkDisplayMode_GetFrameRate(IDeckLinkDisplayMode *mode)
     * }
     */
    public static long IDeckLinkDisplayMode_GetFrameRate(MemorySegment mode) {
        var mh$ = IDeckLinkDisplayMode_GetFrameRate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDisplayMode_GetFrameRate", mode);
            }
            return (long)mh$.invokeExact(mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDisplayMode_GetFieldDominance {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDisplayMode_GetFieldDominance");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetFieldDominance(IDeckLinkDisplayMode *mode)
     * }
     */
    public static FunctionDescriptor IDeckLinkDisplayMode_GetFieldDominance$descriptor() {
        return IDeckLinkDisplayMode_GetFieldDominance.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetFieldDominance(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MethodHandle IDeckLinkDisplayMode_GetFieldDominance$handle() {
        return IDeckLinkDisplayMode_GetFieldDominance.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetFieldDominance(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MemorySegment IDeckLinkDisplayMode_GetFieldDominance$address() {
        return IDeckLinkDisplayMode_GetFieldDominance.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetFieldDominance(IDeckLinkDisplayMode *mode)
     * }
     */
    public static int IDeckLinkDisplayMode_GetFieldDominance(MemorySegment mode) {
        var mh$ = IDeckLinkDisplayMode_GetFieldDominance.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDisplayMode_GetFieldDominance", mode);
            }
            return (int)mh$.invokeExact(mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDisplayMode_GetFlags {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDisplayMode_GetFlags");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetFlags(IDeckLinkDisplayMode *mode)
     * }
     */
    public static FunctionDescriptor IDeckLinkDisplayMode_GetFlags$descriptor() {
        return IDeckLinkDisplayMode_GetFlags.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetFlags(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MethodHandle IDeckLinkDisplayMode_GetFlags$handle() {
        return IDeckLinkDisplayMode_GetFlags.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetFlags(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MemorySegment IDeckLinkDisplayMode_GetFlags$address() {
        return IDeckLinkDisplayMode_GetFlags.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetFlags(IDeckLinkDisplayMode *mode)
     * }
     */
    public static int IDeckLinkDisplayMode_GetFlags(MemorySegment mode) {
        var mh$ = IDeckLinkDisplayMode_GetFlags.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDisplayMode_GetFlags", mode);
            }
            return (int)mh$.invokeExact(mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkVideoFrame_SetMetadata {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_DOUBLE,
            decklinkcapi_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkVideoFrame_SetMetadata");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkVideoFrame_SetMetadata(IDeckLinkVideoFrame *frame, int eotf, double rx, double ry, double gx, double gy, double bx, double by, double wx, double wy, double maxDML, double minDML, double maxCLL, double maxFALL, int cs)
     * }
     */
    public static FunctionDescriptor IDeckLinkVideoFrame_SetMetadata$descriptor() {
        return IDeckLinkVideoFrame_SetMetadata.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkVideoFrame_SetMetadata(IDeckLinkVideoFrame *frame, int eotf, double rx, double ry, double gx, double gy, double bx, double by, double wx, double wy, double maxDML, double minDML, double maxCLL, double maxFALL, int cs)
     * }
     */
    public static MethodHandle IDeckLinkVideoFrame_SetMetadata$handle() {
        return IDeckLinkVideoFrame_SetMetadata.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkVideoFrame_SetMetadata(IDeckLinkVideoFrame *frame, int eotf, double rx, double ry, double gx, double gy, double bx, double by, double wx, double wy, double maxDML, double minDML, double maxCLL, double maxFALL, int cs)
     * }
     */
    public static MemorySegment IDeckLinkVideoFrame_SetMetadata$address() {
        return IDeckLinkVideoFrame_SetMetadata.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkVideoFrame_SetMetadata(IDeckLinkVideoFrame *frame, int eotf, double rx, double ry, double gx, double gy, double bx, double by, double wx, double wy, double maxDML, double minDML, double maxCLL, double maxFALL, int cs)
     * }
     */
    public static boolean IDeckLinkVideoFrame_SetMetadata(MemorySegment frame, int eotf, double rx, double ry, double gx, double gy, double bx, double by, double wx, double wy, double maxDML, double minDML, double maxCLL, double maxFALL, int cs) {
        var mh$ = IDeckLinkVideoFrame_SetMetadata.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkVideoFrame_SetMetadata", frame, eotf, rx, ry, gx, gy, bx, by, wx, wy, maxDML, minDML, maxCLL, maxFALL, cs);
            }
            return (boolean)mh$.invokeExact(frame, eotf, rx, ry, gx, gy, bx, by, wx, wy, maxDML, minDML, maxCLL, maxFALL, cs);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
}

